#this  file contains details  and dependencies of the particular project
[tool.poetry]
name = "todo_app"
version = "0.1.0"
description = ""
authors = ["okputu julius <juliusstan10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
